--- a/apps/ledger-live-mobile/src/locales/zh/common.json
+++ b/apps/ledger-live-mobile/src/locales/zh/common.json
@@ -549,7 +549,7 @@
       "description" : "必须在 30 秒内签署交易。请重试。"
     },
     "TronNotEnoughEnergy" : {
-      "title" : "能量低于必要值。您可能需要支付高达 50TRX 的费用。"
+      "title" : "Energy is lower than necessary. You might pay up to 50TRX in fees."
     },
     "UpdateYourApp" : {
       "title" : "需要更新应用程序",
