File apps/ledger-live-mobile/src/locales/en/common.json was updated on ru-RU locale

--- a/apps/ledger-live-mobile/src/locales/ru/common.json
+++ b/apps/ledger-live-mobile/src/locales/ru/common.json
@@ -1653,6 +1653,10 @@
             "label" : "Проверьте, обнаружено ли устройство Nano X."
           }
         }
+      },
+      "protectConnectionInformationModal" : {
+        "title" : "Почему не подключается устройство Ledger?",
+        "description" : "После активации Bluetooth на устройстве Ledger иногда могут возникать проблемы подключения к мобильному приложению Ledger Live. Чтобы исправить это, воспользуйтесь кнопкой «Как это исправить?»."
       }
     },
     "stepImportAccounts" : {
