--- a/apps/ledger-live-mobile/src/locales/ko/common.json
+++ b/apps/ledger-live-mobile/src/locales/ko/common.json
@@ -549,7 +549,7 @@
       "description" : "트랜잭션은 30초 이내에 서명을 완료해야 합니다. 다시 시도해 주세요."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "에너지가 필요한 것보다 낮습니다. 수수료로 최대 30TRX를 지불할 수 있습니다."
+      "title" : "Energy is lower than necessary. You might pay up to 50TRX in fees."
     },
     "UpdateYourApp" : {
       "title" : "앱 업데이트 필요",
@@ -1653,6 +1653,10 @@
             "label" : "Nano X가 감지되는지 확인하세요."
           }
         }
+      },
+      "protectConnectionInformationModal" : {
+        "title" : "Ledger를 연결할 수 없는 이유가 무엇인가요?",
+        "description" : "Ledger에서 블루투스를 활성화한 후에 Ledger Live 모바일과 연결 문제가 발생한 경우 아래의 \"해결 방법 알아보기\" 버튼을 눌러서 안내에 따라 문제를 해결할 수 있습니다."
       }
     },
     "stepImportAccounts" : {
